Correct invisible block titles on old browsers

--- a/style.css
+++ b/style.css
@@ -496,6 +496,7 @@ body {
 .block a:visited { color: #36A }
 
 #content .block-title, #content .login-block h2 {
+  background: #036
   background: linear-gradient(to bottom, #3f699b 0%,#244b82 100%);
   position: absolute;
   width: 170px;
